# grpc-service-auto

./: .gitignore  Makefile  README.md  async_server_template.json  atom_service.cpp  atom_service.h  atom_service.xmind  atom_service_fwgz.json  atom_service_mbsb.c  atom_service_mbsb.h  atomic_service_st.json  new_atom_service_mbsb.c  new_atom_service_sj.json  os_error.txt  parse_json.puml  run_genCode.py  run_idl_compile.py  run_make.py  run_test_1.py  server_info.json  test_module.py  uml.puml  user_info.json
IDL_inc/: example.c  example.h
Jinja2/: AsyncServerMain.cpp  ClientMain_template_bak.j2  Client_impl_template.j2  Json2AtomInterface.py  Json2ClientClass.py  Json2ServerClass.py  Json2atom_cpp_h.py  Json2proto.py  ServerBaseInfo.json  ServerInfo.json  ServerMain_template.j2  Server_impl_template.j2  Server_impl_template_pro.j2  Services2Server.py  asyn_server_template.j2  async_server_template.j2  async_server_template.json  async_server_template.py  client_impl_template.j2  extract_json_info.py  input_src_fun_template.j2  input_src_header_template.j2  logo.py  proto_template.j2  server_impl_template.j2  sync_server_template.j2
Jinja2/01-examples/: Json2proto.py  README  ServerMain.j2  server.json
Jinja2/02-Json2proto_exe/: json2proto.exe.spec
Json/: atomic_service_mbsb.json  atomic_service_sf.json
Scripts/: MakeServerClient.py
SpidermanWorkSpace/classUtil/: AXservice.py  BaseInfo.py  Capabilities.py  Field.py  GrpcMethod.py  Message.py  ServiceMethodUtil.py
atom_inc/: atomic_service_mbsb.h  atomic_service_sf.h
atom_service/atomic_service_mbsb/: atomic_service_mbsb.cpp
atom_service/atomic_service_sf/: atomic_service_sf.cpp
atom_src/: atomic_service_mbsb.cpp  atomic_service_sf.cpp
bak/: ServerBaseInfo.json  run_make.py
bak/atomic_service_mbsb/: atomic_service_mbsb.json
bak/atomic_service_mbsb/atomic_src/: CMakeLists.txt
bak/atomic_service_sf/: atomic_service_sf.json
bak/atomic_service_sf/sync_client_impl/: CMakeLists.txt  atomic_service_sf_sync_client_impl.cpp
bak/broadcast/: broadcastReceiver.cpp  broadcastSender.cpp  monitorComm.cpp  udpReceiver.cpp  udpSender.cpp
bak/client_src/: client_demo.cpp  client_formal_demo_with_dds.cpp  client_formal_demo_with_dds_debug.cpp
bak/communication/: dds_publisher_formal_demo.cpp
bak/jinja/: sync_client_content_template.j2  sync_client_footer_template.j2  sync_client_header_template.j2
bak/server_compiling-master-2024-10-bak/: README.en.md  README.md  atom_service_fwgz.json  atom_service_mbsb.c  atom_service_mbsb.h  demo.h  developer.c  h2json.py  new_atom_service_mbsb.h  new_atom_service_sj.json  s2info.py  s2j.py  t1.py
bak/src/: atom_service.py  ax_service.py  base_info.py  capabilities.py  combine_service.py  developer.py  grpc_method.py  main.py  maintainer.py  message.py  operating_system.py  owner.py  resource_requirement.py  return_code.py  service_method.py  service_method_util.py  service_util.py
client_src/: client_formal_demo_with_dds.cpp  client_sync_demo.cpp  time_test.cpp
db/atomic_service/atomic_service_mbsb/sync_server_impl/: CMakeLists.txt  atomic_service_mbsb_sync_server_impl.cpp
db/client/atomic_test_zlsc/: CMakeLists.txt  Header.cpp  atomic_test_light.cpp
db/client/plane_attack/sync_client/: CMakeLists.txt  plane_attack_sync_client.cpp
db/client/service_easy/sync_client/: CMakeLists.txt  service_easy.cpp  service_easy_sync_client.cpp
db/client/test0521/sync_client/: CMakeLists.txt  test0521_sync_client.cpp
db/dds_app/FusionDataDemo/: CMakeLists.txt  FusionData_1.cpp  ImageDetectionNode_1.cpp  MotorDataNode_1.cpp  RadarDataNode_1.cpp  RobotPoseNode_1.cpp  StartPublisher_1.cpp
db/mock_sener/mock_E/: CMakeLists.txt  EndResponse.h  mock_E.cpp
db/mock_sener/mock_Infrared/: CMakeLists.txt  StartRequestInfrared.idl  mock_Infrared.cpp
db/test_sh/: atomic_test_delay_fusion.sh  atomic_test_delay_infrared.sh  atomic_test_delay_light.sh  atomic_test_delay_radar.sh  atomic_test_delay_zlsc.sh  atomic_test_fusion.sh  atomic_test_infrared.sh  atomic_test_light.sh  atomic_test_radar.sh  atomic_test_zlsc.sh
doc/: environment_build.md  notice.md  parse_json.puml
example/client/: client_formal_demo_with_dds.cpp
example/client_json/: app_data_fusion.json  demo_two_service.json  plane_attack.json  test0516.json
example/communication/: dds_publisher_formal_demo.cpp
example/dds_example/: FusionData.cpp  FusionData.h  ImageDetection.cpp  ImageDetection.h  MotorData.cpp  MotorData.h  RadarData.cpp  RadarData.h  (+3 more)
flask/: flask_main.py  global_var.py  test_orchestrate.py  utils.py
input_inc/: atomic_service_mbsb.h  atomic_service_sf.h
input_src/: atomic_service_mbsb.cpp
json_server/: ServerBaseInfo.json  serverA.json
lib/: README
protos/: atomic_service_mbsb.grpc.pb.cc  atomic_service_mbsb.grpc.pb.h  atomic_service_mbsb.pb.cc  atomic_service_mbsb.pb.h  atomic_service_mbsb.proto  atomic_service_sf.grpc.pb.cc  atomic_service_sf.grpc.pb.h  atomic_service_sf.pb.cc  atomic_service_sf.pb.h  atomic_service_sf.proto  run_protoc.sh
python/: client.py  my_service_pb2.py  my_service_pb2_grpc.py  run_python_gprc.sh  server.py
rpc_client_inc/: atomic_service_mbsb_client.h  atomic_service_sf_client.h
rpc_server_inc/: atomic_service_mbsb_impl.h  atomic_service_sf_impl.h
server_src/: AsyncServerMain.cpp  ClientMain.cpp  client_formal_demo_with_dds.cpp  dds_publisher_formal_demo.cpp  serverA_async.cpp  serverA_async_server.cpp  serverA_sync.cpp  serverA_sync_server.cpp  time_test.cpp
src/: AsyncServerMain.cpp  ClientMain.cpp  ReconnaissanceServer.cpp
test/: run_idl_compile.py  server_info.json  tes_dds.py  test_client.py  test_dds_generate.py  test_executable.py  test_generate.py  test_grpc__idl_compile.py  test_grpc_client.py  test_grpc_dds.py  test_grpc_executable.py  test_grpc_generate.py  test_grpc_idl_compile.py  test_grpc_module.py  test_grpc_module_530.py  test_grpc_module_530_attack.py  test_grpc_module_64.py  test_grpc_server_530.py  test_grpc_server_530_attack.py  test_grpc_server_64.py  test_module.py  test_server.py  test_service.py  user_info.json
(+368 files in other folders)
